<resources>
    <string name="app_name">HailianMgr</string>
    <!-- string in login page-->
    <string name="login_phone">Phone</string>
    <string name="login_password">Password</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_tittle">Hailian</string>
    <string name="login_signup">Sign up</string>
    <string name="login_Signin">Sign in</string>
    <string name="login_tip">Tip</string>
    <string name="login_login_error">Incorrect account or password!</string>

    <!--    string in sign up-->
    <string name="signup">Sign up</string>
    <string name="signup_welcome">Welcome!</string>
    <string name="signup_excited">We are excited to see you here!</string>
    <string name="signup_name">Name</string>
    <string name="signup_sex">Sex</string>
    <string name="signup_sex_man">Man</string>
    <string name="signup_sex_woman">Woman</string>
    <string name="signup_position">Position</string>
    <string name="signup_have_account">Already have an account?</string>
    <!--    string in home page-->
    <string name="home_page">HomePage</string>
    <string name="home_page_exit_hint">click once more to exit</string>
    <!--    string in home -->
    <string name="home">Home</string>
    <string name="home_search">Search</string>
    <string name="home_business">Business</string>
    <string name="home_produce">Produce</string>
    <string name="home_product">product</string>
    <string name="home_warehouse">Warehouse</string>
    <string name="home_contract">Contract</string>
    <string name="home_series">Series</string>
    <!--    string in User -->
    <string name="user">User</string>
    <!--    string in Notifications -->
    <string name="notifications">Notifications</string>
    <!--    string in product -->
    <string name="product_name">Name</string>
    <string name="product_image">Image</string>
    <string name="product_des">Description</string>
    <string name="product_price">Price</string>
    <string name="product_series">Series</string>
    <string name="product_state">State</string>
    <string name="product_btn1">Edit</string>
    <string name="product_btn2">Save</string>
    <string name="product_filter">Filter</string>
</resources>