<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home_page_nav_home">

    <fragment
        android:id="@+id/home_page_nav_home"
        android:name="edu.scut.yao.home_page.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home" />

    <fragment
        android:id="@+id/home_page_nav_not"
        android:name="edu.scut.yao.home_page.notifications.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/notifications" />

    <fragment
        android:id="@+id/home_page_nav_user"
        android:name="edu.scut.yao.home_page.user.UserFragment"
        android:label="@string/user"
        tools:layout="@layout/user"/>
</navigation>