<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".Login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/damion"
            android:gravity="center"
            android:text="@string/login_tittle"
            android:textColor="@color/loginTextColor"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/loginTextColor"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/login_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:drawableEnd="@drawable/phone"
                android:drawablePadding="16dp"
                android:fontFamily="monospace"
                android:hint="@string/login_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/loginTextColor"
            android:theme="@style/EditScreenTextInputLayoutStyle">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:drawableEnd="@drawable/password"
                android:drawablePadding="16dp"
                android:fontFamily="monospace"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="monospace"
                android:onClick="signUp"
                android:text="@string/login_signup"
                android:textAllCaps="false"
                android:textColor="@color/loginTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/buttonshapewhitebg"
                android:fontFamily="monospace"
                android:onClick="toHomePage"
                android:text="@string/login_Signin"
                android:textAllCaps="false"
                android:textColor="@color/loginTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>


        <TextView
            android:id="@+id/login_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/login_forgot"
            android:textAlignment="center"
            android:textColor="@color/loginTextColor"
            android:textSize="16sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>